# cafea

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  developer-guide.md
docs/: index.md
src/base/: dof_handler.cc  load.cc  material.cc  node.cc  section.cc  string_operation.cc
src/core/: coord_tran.cc  eigensolver.cc  integration.cc  node_constraint.cc  sparse_matrix.cc  sparse_pattern.cc
src/element/: additional.cc  element.cc  element_attr.cc  pipe.cc  qacm_shape.cc  shell.cc
src/fortran/: bcy_reader.f90  bcy_reader_2.f90  cdb_reader.f90  cdb_reader2.f90  common_reader.f90
src/include/: base.h  boundary.h  cafea.h  dof_handler.h  eigenpair.h  element.h  element_attr.h  element_cmplx_ext.hpp  element_ext.hpp  element_lib.h  enum_lib.h  fortran_wrapper.h  load.h  material.h  mesh_reader.h  node.h  node_ext.hpp  section.h  solution.h  solution_config.h  sparse_matrix.h  timer.h  utils.h  utils_ext.h
src/include/cafea/: base.h  boundary.h  cafea.hpp  dof_handler.h  element.h  element_attr.h  element_cmplx_ext.hpp  element_ext.hpp  element_lib.h  enum_lib.h  fortran_wrapper.h  gauss_legendre.hpp  load.h  material.h  mesh_reader.h  node.h  node_ext.hpp  section.h  solution.h  sparse_matrix.h  timer.h  utils.h  utils.hpp  utils_ext.h  utils_ext.hpp
src/include/cafea/base/: base.hpp  boundary.hpp  dof_handler.hpp  eigenpair.hpp  enum_lib.hpp  load.hpp  material.hpp  node.hpp  node_base.hpp  node_ext.hpp  section.hpp  sparse_matrix.hpp
src/include/cafea/core/: solution.hpp
src/include/cafea/element/: element.hpp  element_attr.hpp  element_base.hpp  element_cmplx_ext.hpp  element_ext.hpp  element_lib.hpp
src/include/cafea/fortran/: fortran_wrapper.hpp
src/include/cafea/io/: mesh_reader.hpp
src/include/cafea/matio/: matioConfig.h
src/include/cafea/utils/: gauss_legendre.hpp  timer.hpp  utils.hpp  utils_ext.hpp
src/include/matio/: matioConfig.h  matio_pubconf.h
src/io/: bcy_reader.cc  cdb_reader.cc  simple_convert.cc
src/solution/: harmonic_full_analysis.cc  modal_analysis.cc  static_analysis.cc
test/: Makefile  basic.mk  harmonic_main.cc  matio.mk  modal_main.cc  node_basic_test.cc  solution_basic_test.cc  solution_modal_test.cc  solution_static_test.cc  test_utility_01.cc
test/ansys/: cdb_file_test.f90  cdb_test_simple.cc  nrc1677_1_1.cdb  nrc1677_1_2.cdb  nrc1677_1_3.cdb  nrc1677_1_4.cdb  nrc1677_1_5.cdb  nrc1677_1_6.cdb  nrc1677_1_7.cdb  nrc1677_2_1.cdb  nrc1677_2_2.cdb  nrc1677_2_3.cdb  nrc1677_2_4.cdb  nrc6645_1_1.cdb  pipe_demo_01.cdb  pipe_demo_02.cdb  pipe_demo_03.cdb
test/basic/: a01.cc  a02.cc  a03.cc  a04.cc  a05.cc  a06.cc  a07.cc  a10.cc  b01.cc  b02.cc  b03.cc  b04.cc  f01.cc  func_random.hpp  integration.hpp
test/bcy_data/: elbow_01.bcy  nrc_ex02.bcy
